prevent line wrapping

--- a/Timer/myStyles.css
+++ b/Timer/myStyles.css
@@ -5,3 +5,7 @@ h3 {
 p {
   white-space: nowrap;
 }
+
+ul {
+  white-space: nowrap;
+}
